--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,4 +60,9 @@ if(${ENTITY_CRAFT_EXAMPLE})
             COMMAND ${CMAKE_COMMAND} -E copy_if_different
             $<TARGET_FILE:${PROJECT_NAME}>
             $<TARGET_FILE_DIR:${PROJECT_NAME}>/example)
+
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            $<TARGET_FILE:QueryCraft>
+            $<TARGET_FILE_DIR:${PROJECT_NAME}>/example)
 endif ()
