--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
-[submodule "external/DatabaseAdapter"]
-	path = external/DatabaseAdapter
+[submodule "include/external/DatabaseAdapter"]
+	path = include/external/DatabaseAdapter
 	url = https://github.com/MisterixTeamAsmodeus/DatabaseAdapter.git
-[submodule "external/ReflectionApi"]
-	path = external/ReflectionApi
+[submodule "include/external/ReflectionApi"]
+	path = include/external/ReflectionApi
 	url = https://github.com/MisterixTeamAsmodeus/ReflectionApi.git
-[submodule "external/QueryCraft"]
-	path = external/QueryCraft
+[submodule "include/external/QueryCraft"]
+	path = include/external/QueryCraft
 	url = https://github.com/MisterixTeamAsmodeus/QueryCraft.git
+[submodule "external/SqliteAdapter"]
+	path = external/SqliteAdapter
+	url = https://github.com/MisterixTeamAsmodeus/SqliteAdapter.git
