--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 
 project("${entity_craft_project_name}Example" LANGUAGES CXX)
 
+# Add the SqliteAdapter library
+add_subdirectory(../external/SqliteAdapter ${CMAKE_CURRENT_BINARY_DIR}/SqliteAdapter)
+
 file(GLOB_RECURSE EXAMPLE_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 foreach(EXAMPLE_SOURCE_FILE ${EXAMPLE_SOURCE_FILES})
@@ -12,5 +15,6 @@ foreach(EXAMPLE_SOURCE_FILE ${EXAMPLE_SOURCE_FILES})
     add_executable(${EXAMPLE_TARGET} ${EXAMPLE_SOURCE_FILE})
 
     target_compile_features(${EXAMPLE_TARGET} PUBLIC cxx_std_14)
-    target_link_libraries(${EXAMPLE_TARGET} PRIVATE ${entity_craft_project_name})
+    target_include_directories(${EXAMPLE_TARGET} PRIVATE ../external/SqliteAdapter)
+    target_link_libraries(${EXAMPLE_TARGET} PRIVATE ${entity_craft_project_name} SqliteAdapter)
 endforeach()
