--- a/libs/driver/SqliteAdapter/CMakeLists.txt
+++ b/libs/driver/SqliteAdapter/CMakeLists.txt
@@ -6,7 +6,7 @@ file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
 file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
 if (NOT TARGET SQLite3)
-    add_subdirectory(include/external/sqlite-amalgamation)
+    add_subdirectory(libs/sqlite-amalgamation)
 endif ()
 
 add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
@@ -14,7 +14,7 @@ add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
-        include/external
+        ${CMAKE_CURRENT_SOURCE_DIR}/libs
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
