Убрал лишние функции и исправил cmake

--- a/libs/driver/DatabaseAdapter/CMakeLists.txt
+++ b/libs/driver/DatabaseAdapter/CMakeLists.txt
@@ -19,6 +19,14 @@ target_include_directories(${PROJECT_NAME} PUBLIC
         $<INSTALL_INTERFACE:include>
 )
 
+target_include_directories(${PROJECT_NAME} PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/../../
+)
+
+target_link_libraries(${PROJECT_NAME} PUBLIC
+        TypeConverterApi
+)
+
 install(TARGETS ${PROJECT_NAME}
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
