--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,3 +5,5 @@ project(examples LANGUAGES CXX)
 add_subdirectory(EntityCraft)
 add_subdirectory(QueryCraft)
 add_subdirectory(ReflectionApi)
+add_subdirectory(PostgreAdapter)
+add_subdirectory(SqliteAdapter)
