--- a/libs/driver/SqliteAdapter/CMakeLists.txt
+++ b/libs/driver/SqliteAdapter/CMakeLists.txt
@@ -46,7 +46,9 @@ endif()
 file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
 file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
-add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
+add_definitions(-DSQLITE_LIBRARY)
+
+add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
 
@@ -63,7 +65,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
         DatabaseAdapter
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE
+target_link_libraries(${PROJECT_NAME} PUBLIC
         ${SQLite3_LIBRARIES}
 )
 
