--- a/example/PostgreAdapter/CMakeLists.txt
+++ b/example/PostgreAdapter/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(EntityCraft_Example LANGUAGES CXX)
+project(PostgreAdapter_Example LANGUAGES CXX)
 
 file(GLOB_RECURSE EXAMPLE_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 foreach(EXAMPLE_SOURCE_FILE ${EXAMPLE_SOURCE_FILES})
     get_filename_component(EXAMPLE_NAME ${EXAMPLE_SOURCE_FILE} NAME_WE)
 
-    set(EXAMPLE_TARGET "EntityCraft_${EXAMPLE_NAME}")
+    set(EXAMPLE_TARGET "PostgreAdapter_${EXAMPLE_NAME}")
 
     add_executable(${EXAMPLE_TARGET} ${EXAMPLE_SOURCE_FILE})
 
@@ -15,7 +15,7 @@ foreach(EXAMPLE_SOURCE_FILE ${EXAMPLE_SOURCE_FILES})
     target_link_libraries(${EXAMPLE_TARGET} PRIVATE EntityCraft)
 
     add_custom_command(TARGET ${EXAMPLE_TARGET} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E echo "POST_BUILD COPY LIB FROM $<TARGET_FILE:SqliteAdapter> TO $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>"
-            COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:SqliteAdapter> $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>
+            COMMAND ${CMAKE_COMMAND} -E echo "POST_BUILD COPY LIB FROM $<TARGET_FILE:PostgreAdapter> TO $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>"
+            COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:PostgreAdapter> $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>
     )
 endforeach()
