--- a/libs/driver/SqliteAdapter/CMakeLists.txt
+++ b/libs/driver/SqliteAdapter/CMakeLists.txt
@@ -7,6 +7,7 @@ set(ENTITY_CRAFT_SQLITE3_MODULES_LOCATION "INSTALLED" CACHE STRING "Location whe
 ###################################################################################################
 ## get SQLite3 module in specified location
 
+set(ENTITY_CRAFT_SQLITE3_MODULES_LOCATION_INSTALLED INSTALLED)
 set(ENTITY_CRAFT_SQLITE3_MODULES_LOCATION_CUSTOM CUSTOM)
 set(ENTITY_CRAFT_SQLITE3_MODULES_LOCATION_EXTERNAL EXTERNAL)
 
@@ -15,6 +16,12 @@ if(ENTITY_CRAFT_SQLITE3_MODULES_LOCATION STREQUAL ENTITY_CRAFT_SQLITE3_MODULES_L
     message("SQLite3_INCLUDE_DIRS = ${SQLite3_INCLUDE_DIRS}")
     set(SQLite3_LIBRARIES SQLite3)
     message("SQLite3_LIBRARIES = ${SQLite3_LIBRARIES}")
+elseif (ENTITY_CRAFT_SQLITE3_MODULES_LOCATION STREQUAL ENTITY_CRAFT_SQLITE3_MODULES_LOCATION_INSTALLED)
+    message("Finding SQLite3 in location=INSTALLED")
+
+    find_package(unofficial-sqlite3 REQUIRED)
+    set(SQLite3_LIBRARIES unofficial::sqlite3::sqlite3)
+
 elseif (ENTITY_CRAFT_SQLITE3_MODULES_LOCATION STREQUAL ENTITY_CRAFT_SQLITE3_MODULES_LOCATION_EXTERNAL)
     message("Finding SQLite3 in location=EXTERNAL")
     include(FetchContent)
