Обновление библиотеки ReflectionApi добавлены тесты, примеры, README.md

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -31,6 +31,40 @@ elseif (ENTITY_CRAFT_GOOGLETEST_MODULES_LOCATION STREQUAL ENTITY_CRAFT_GOOGLETES
     )
 
     FetchContent_MakeAvailable(googletest)
+    
+    # Disable -Wcharacter-conversion warning for GoogleTest to fix compilation error
+    # This is a known issue with GoogleTest and certain compilers
+    # Function to apply compiler-specific flags for suppressing character conversion warnings
+    function(suppress_character_conversion_warning target_name)
+        # Check for Clang first (including clang-cl which sets both Clang and MSVC)
+        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+            # Clang (including clang-cl on Windows): suppress -Wcharacter-conversion
+            target_compile_options(${target_name} PRIVATE -Wno-character-conversion)
+        elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+            # GCC: suppress -Wcharacter-conversion (available in GCC 7+)
+            if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 7.0)
+                target_compile_options(${target_name} PRIVATE -Wno-character-conversion)
+            endif()
+        elseif(MSVC)
+            # MSVC (native, not clang-cl): suppress warning C4838 (narrowing conversion)
+            # Note: MSVC doesn't have exact equivalent, but we can suppress related warnings
+            target_compile_options(${target_name} PRIVATE /wd4838)
+        endif()
+    endfunction()
+    
+    # Apply to all GoogleTest targets
+    if(TARGET gtest)
+        suppress_character_conversion_warning(gtest)
+    endif()
+    if(TARGET gtest_main)
+        suppress_character_conversion_warning(gtest_main)
+    endif()
+    if(TARGET gmock)
+        suppress_character_conversion_warning(gmock)
+    endif()
+    if(TARGET gmock_main)
+        suppress_character_conversion_warning(gmock_main)
+    endif()
 else()
     message(FATAL_ERROR "Unknown location to find googletest '${ENTITY_CRAFT_GOOGLETEST_MODULES_LOCATION}'")
 endif()
@@ -41,8 +75,9 @@ add_executable(
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-    EntityCraft
-    GTest::gtest_main    # Google Test + main()
+        GTest::gtest_main    # Google Test + main()
+        ReflectionApi
+        TypeConverterApi
 )
 
 include(GoogleTest)
