--- a/libs/ReflectionApi/CMakeLists.txt
+++ b/libs/ReflectionApi/CMakeLists.txt
@@ -2,29 +2,36 @@ cmake_minimum_required(VERSION 3.8)
 
 project(ReflectionApi LANGUAGES CXX)
 
-file(GLOB_RECURSE HEADER_FILES include/*.h)
-file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
-
-add_library(${PROJECT_NAME} STATIC ${HEADER_FILES} ${SOURCE_FILES})
-
-target_include_directories(${PROJECT_NAME} PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/../
+# Header-only library - явное перечисление заголовочных файлов
+set(HEADER_FILES
+    include/ReflectionApi/entity.hpp
+    include/ReflectionApi/property.hpp
+    include/ReflectionApi/referenceproperty.hpp
+    include/ReflectionApi/reflectionapi.hpp
+    include/ReflectionApi/helper/templates.hpp
+    include/ReflectionApi/helper/tuplealgoritm.hpp
+    include/ReflectionApi/visitor/anypropertyvisitor.hpp
+    include/ReflectionApi/visitor/propertyvisitor.hpp
+    include/ReflectionApi/visitor/referencepropertyvisitor.hpp
 )
 
-target_link_libraries(${PROJECT_NAME} PUBLIC
+# Создаем интерфейсную библиотеку (header-only)
+add_library(${PROJECT_NAME} INTERFACE)
+
+target_include_directories(${PROJECT_NAME} INTERFACE
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+)
+
+target_link_libraries(${PROJECT_NAME} INTERFACE
         TypeConverterApi
 )
 
-target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_14)
+target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_14)
 
 set_target_properties(${PROJECT_NAME}
         PROPERTIES
         OUTPUT_NAME ${PROJECT_NAME}
-)
-
-target_include_directories(${PROJECT_NAME} PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-        $<INSTALL_INTERFACE:include>
 )
 
 install(TARGETS ${PROJECT_NAME}
