Обновление библиотеки TypeConverterApi добавлены тесты, примеры, README.md

--- a/example/TypeConverterApi/CMakeLists.txt
+++ b/example/TypeConverterApi/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(QueryCraft_Example LANGUAGES CXX)
+project(TypeConverterApi_Example LANGUAGES CXX)
 
 file(GLOB_RECURSE EXAMPLE_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 foreach (EXAMPLE_SOURCE_FILE ${EXAMPLE_SOURCE_FILES})
     get_filename_component(EXAMPLE_NAME ${EXAMPLE_SOURCE_FILE} NAME_WE)
 
-    set(EXAMPLE_TARGET "QueryCraft_${EXAMPLE_NAME}")
+    set(EXAMPLE_TARGET "TypeConverterApi_${EXAMPLE_NAME}")
 
     add_executable(${EXAMPLE_TARGET} ${EXAMPLE_SOURCE_FILE})
 
-
-    target_link_libraries(${EXAMPLE_TARGET} PRIVATE EntityCraft)
+    target_link_libraries(${EXAMPLE_TARGET} PRIVATE TypeConverterApi)
 endforeach ()
+
