--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,5 +5,6 @@ project(examples LANGUAGES CXX)
 add_subdirectory(EntityCraft)
 add_subdirectory(QueryCraft)
 add_subdirectory(ReflectionApi)
+add_subdirectory(TypeConverterApi)
 add_subdirectory(PostgreAdapter)
 add_subdirectory(SqliteAdapter)
