Обновление библиотеки SqliteAdapter добавлены тесты, примеры и README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ option(ENTITY_CRAFT_TEST "Включить тесты для EntityCraft" OFF)
 option(ENTITY_CRAFT_ENABLE_SQLITE "Включить драйвер для Sqlite3" OFF)
 option(ENTITY_CRAFT_ENABLE_POSTGRE "Включить драйвер для PostgreSql" OFF)
 
-if (${ENTITY_CRAFT_ENABLE_SQLITE})
+if (${ENTITY_CRAFT_ENABLE_SQLITE} OR ${ENTITY_CRAFT_TEST})
     add_definitions(-DENABLE_SQLITE)
     add_subdirectory(libs/driver/SqliteAdapter)
 endif ()
 
-if (${ENTITY_CRAFT_ENABLE_POSTGRE})
+if (${ENTITY_CRAFT_ENABLE_POSTGRE} OR ${ENTITY_CRAFT_TEST})
     add_definitions(-DENABLE_POSTGRE)
     add_subdirectory(libs/driver/PostgreAdapter)
 endif ()
