Обновление библиотеки PostgreAdapter добавлены тесты, примеры и README.md

--- a/example/PostgreAdapter/CMakeLists.txt
+++ b/example/PostgreAdapter/CMakeLists.txt
@@ -11,11 +11,27 @@ foreach(EXAMPLE_SOURCE_FILE ${EXAMPLE_SOURCE_FILES})
 
     add_executable(${EXAMPLE_TARGET} ${EXAMPLE_SOURCE_FILE})
 
+    target_link_libraries(${EXAMPLE_TARGET} PRIVATE PostgreAdapter)
 
-    target_link_libraries(${EXAMPLE_TARGET} PRIVATE EntityCraft)
-
+    # Копируем PostgreAdapter библиотеку (DLL на Windows, .so на Linux)
     add_custom_command(TARGET ${EXAMPLE_TARGET} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E echo "POST_BUILD COPY LIB FROM $<TARGET_FILE:PostgreAdapter> TO $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>"
-            COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:PostgreAdapter> $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:PostgreAdapter> $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>
+            COMMENT "Copying PostgreAdapter to example output directory"
     )
+
+    # Копируем libpq только на Windows (на Linux библиотеки доступны системно)
+    if (WIN32)
+        add_custom_command(TARGET ${EXAMPLE_TARGET} POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE_DIR:PostgreAdapter>/libcrypto-3-x64.dll $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>
+                COMMENT "Copying libcrypto-3.dll to example output directory"
+        )
+        add_custom_command(TARGET ${EXAMPLE_TARGET} POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE_DIR:PostgreAdapter>/LIBPQ.dll $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>
+                COMMENT "Copying libpq.dll to example output directory"
+        )
+        add_custom_command(TARGET ${EXAMPLE_TARGET} POST_BUILD
+                COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE_DIR:PostgreAdapter>/libssl-3-x64.dll $<TARGET_FILE_DIR:${EXAMPLE_TARGET}>
+                COMMENT "Copying libssl-3.dll to example output directory"
+        )
+    endif ()
 endforeach()
