--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -130,19 +130,6 @@ add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMENT "Copying SqliteAdapter to test output directory"
 )
 
-if(TARGET unofficial::sqlite3::sqlite3)
-    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:unofficial::sqlite3::sqlite3> $<TARGET_FILE_DIR:${PROJECT_NAME}>
-            COMMENT "Copying sqlite3 to example output directory"
-    )
-endif()
-if(TARGET SQLite3)
-    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:SQLite3> $<TARGET_FILE_DIR:${PROJECT_NAME}>
-            COMMENT "Copying sqlite3 to example output directory"
-    )
-endif()
-
 # Копируем PostgreAdapter
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
@@ -151,8 +138,12 @@ add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
         COMMENT "Copying PostgreAdapter to test output directory"
 )
 
-# Копируем libpq только на Windows (на Linux библиотеки доступны системно)
 if (WIN32)
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE_DIR:SqliteAdapter>/sqlite3.dll $<TARGET_FILE_DIR:${PROJECT_NAME}>
+            COMMENT "Copying sqlite3.dll to example output directory"
+    )
+
     add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE_DIR:PostgreAdapter>/libcrypto-3-x64.dll $<TARGET_FILE_DIR:${PROJECT_NAME}>
             COMMENT "Copying libcrypto-3.dll to example output directory"
